--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@redux-devtools/extension": "^3.3.0",
     "axios": "^1.6.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
-    "react-paginate": "^8.2.0"
+    "react-paginate": "^8.2.0",
+    "react-redux": "^9.0.4",
+    "redux": "^5.0.1",
+    "theme-change": "^2.5.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
