--- a/package.json
+++ b/package.json
@@ -11,13 +11,19 @@
   },
   "dependencies": {
     "@redux-devtools/extension": "^3.3.0",
+    "@tanstack/react-router": "^1.1.9",
     "axios": "^1.6.3",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-paginate": "^8.2.0",
     "react-redux": "^9.0.4",
+    "react-responsive-carousel": "^3.2.23",
+    "react-router-dom": "^6.21.1",
     "redux": "^5.0.1",
+    "sort-by": "^1.2.0",
     "theme-change": "^2.5.0"
   },
   "devDependencies": {
